# fmo-essentia

./: .gitignore  README.md  models.toml  pyproject.toml  setup.cfg
essentia_tagger/: analyzer.py  api.py  cli.py  download_models.py
