[metadata]
name = clrmo-essentia-tagger
version = 0.1.0
description = Analyze music files with Essentia and write results back to CLRMO via REST API

[options]
packages = find:
python_requires = >=3.9
install_requires =
    essentia-tensorflow
    requests>=2.28

[options.entry_points]
console_scripts =
    clrmo-tag = essentia_tagger.cli:main
    clrmo-download-models = essentia_tagger.download_models:main
